--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,18 @@
       "request": "launch",
       "name": "Test GPromise",
       "program": "${workspaceRoot}/test-promise.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Test GPromise2",
+      "program": "${workspaceRoot}/test-promise2.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Test 3",
+      "program": "${workspaceRoot}/ptest3.js"
     }
   ]
 }
