--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "promises-aplus-tests test/adapter",
     "test:cover": "mocha -R nyan ./test/cover.js",
-    "test:step": "mocha ./test/step.js"
+    "test:step": "mocha ./test/step.js",
+    "test:step:debug": "node --inspect-brk ./node_modules/mocha/bin/mocha ./test/step.js"
   },
   "repository": {
     "type": "git",
