--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:cover": "mocha -R nyan ./test/cover.js",
     "test:step": "mocha ./test/step.js",
     "test:step:debug": "node --inspect-brk ./node_modules/mocha/bin/mocha ./test/step.js",
-    "mocha": "node --inspect-brk ./node_modules/mocha/bin/mocha"
+    "mocha": "node --inspect-brk ./node_modules/mocha/bin/mocha",
+    "mocha:zz": "yarn mocha test/step.js -g 'zz'"
   },
   "repository": {
     "type": "git",
